--- a/index.html
+++ b/index.html
@@ -1,41 +1,123 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Card Layout</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>proyecto italiano</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <main class="contenido-pagina">
-    <div class="carta">
-      <div class="contenido">
-        <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
-        <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
-        <button class="btn">Lorem ipsum</button>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="contenido">
-        <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
-        <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque! Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
-        <button class="btn">Lorem ipsum</button>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="contenido">
-        <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
-        <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
-        <button class="btn">Lorem impsum</button>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="contenido">
-        <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
-        <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
-        <button class="btn">Lorem impsum</button>
-      </div>
-    </div>
-  </main>
+    <header>
+        <div class="logo">
+            <img src="ruta-del-logo.png" alt="Logo">
+        </div>
+        <div class="menu-hamburguesa" id="menu-hamburguesa">
+            <div class="linea"></div>
+            <div class="linea"></div>
+            <div class="linea"></div>
+        </div>
+        <nav class="menu" id="menu">
+            <!-- Añadir elementos del menu -->
+        </nav>
+    </header>
+    <main>
+        <section class="intro">
+            <h1>Lorem ipsum dolor</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, dolores, asperiores odio architecto
+            </p>
+            <button id="openModalBtn">Mostrar Cartas</button>
+        </section>
+        
+        <div class="modal" id="myModal">
+            <div class="modal-content">
+                <div class="carta">
+                    <div class="contenido">
+                      <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
+                      <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
+                      <button class="btn">Lorem ipsum</button>
+                    </div>
+                  </div>
+                  <div class="carta">
+                    <div class="contenido">
+                      <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
+                      <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque! Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
+                      <button class="btn">Lorem ipsum</button>
+                    </div>
+                  </div>
+                  <div class="carta">
+                    <div class="contenido">
+                      <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
+                      <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
+                      <button class="btn">Lorem impsum</button>
+                    </div>
+                  </div>
+                  <div class="carta">
+                    <div class="contenido">
+                      <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
+                      <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
+                      <button class="btn">Lorem impsum</button>
+                    </div>
+                </div>              
+            </div>
+        </div>
+
+        <section class="slider">
+            <div class="slider-container" id="slider-container">
+                <div class="slider-track">
+                    <div class="slider-group active">
+                        <div class="slider-item">
+                            <img src="img/3f0afa7b77ce6338ff97b3fd882796ea.jpg" alt="Imagen 1">
+                        </div>
+                        <div class="slider-item">
+                            <img src="img/777c486d0dd815e7ce46bce1d30ca59a.jpg" alt="Imagen 2">
+                        </div>
+                        <div class="slider-item">
+                            <img src="img/bc62690ec636842c7d0caa57828f1773.jpg" alt="Imagen 3">
+                        </div>
+                        <div class="slider-item">
+                            <img src="img/descarafsdaga.jpg" alt="Imagen 4">
+                        </div>
+                    </div>
+                    <div class="slider-group">
+                        <div class="slider-item">
+                            <img src="img/descarga (1).jpg" alt="Imagen 5">
+                        </div>
+                        <div class="slider-item">
+                            <img src="img/descarga (2).jpg" alt="Imagen 6">
+                        </div>
+                        <div class="slider-item">
+                            <img src="img/descarga (3).jpg" alt="Imagen 7">
+                        </div>
+                        <div class="slider-item">
+                            <img src="img/descarga (4).jpg" alt="Imagen 8">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="comentarios">
+            <div class="carta_comentario">
+                <p class="comentario">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget metus non dolor eleifend ultrices.</p>
+                <p class="persona">Rodrigo Araujo</p>
+                <p class="texto-breve">Eh llorado sangre haciendo esto</p>
+            </div>
+            <div class="carta_comentario">
+                <p class="comentario">Vestibulum vel odio nisi. Ut lobortis, nunc nec posuere malesuada, ex libero vehicula tortor, at dapibus nibh arcu ut felis.</p>
+                <p class="persona">Sergio /Sin apellido/</p>
+                <p class="texto-breve">texto breve</p>
+            </div>
+            <div class="carta_comentario">
+                <p class="comentario">Aliquam erat volutpat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                <p class="persona">Emiliano /Sin apellido/</p>
+                <p class="texto-breve">texto breve</p>
+            </div>
+            <div class="carta_comentario">
+                <p class="comentario">Curabitur tempus dui eget ante maximus, et ultricies mi rutrum.</p>
+                <p class="persona">Martina Torres</p>
+                <p class="texto-breve">texto breve</p>
+            </div>
+        </section>
+    </main>
+    <script src="scripts.js"></script>
 </body>
 </html>
