--- a/index.html
+++ b/index.html
@@ -118,6 +118,6 @@
             </div>
         </section>
     </main>
-    <script src="scripts.js"></script>
+    <script src="Script.js"></script>
 </body>
 </html>
