--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>proyecto italiano</title>
+    <title>Proyecto Italiano</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,79 +22,63 @@
     </header>
     <main>
         <section class="intro">
-            <h1>Lorem ipsum dolor</h1>
+            <h1>Palio di Siena</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, dolores, asperiores odio architecto
             </p>
-            <button id="openModalBtn">Mostrar Cartas</button>
+        </section>
+        <section class="detalle">
+            <h2>Historia del Palio de Siena</h2>
+            <p>El Palio de Siena es una carrera de caballos que se celebra en la Piazza del Campo, en la ciudad de Siena, Italia. La carrera se celebra dos veces al año, el 2 de julio y el 16 de agosto. Cada carrera enfrenta a diez jinetes, cada uno de los cuales representa a una de las diecisiete contrade de Siena.</p>
+            <img src="historia.jpg" alt="Historia del Palio de Siena">
+        </section>
+    
+        <section class="calendario">
+            <h2>Calendario de Eventos</h2>
+            <div class="evento">
+                <h3>2 de julio</h3>
+                <p>Celebración del Palio de Provenzano.</p>
+            </div>
+            <div class="evento">
+                <h3>16 de agosto</h3>
+                <p>Celebración del Palio dell'Assunta.</p>
+            </div>
         </section>
         
-        <div class="modal" id="myModal">
-            <div class="modal-content">
-                <div class="carta">
-                    <div class="contenido">
-                      <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
-                      <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
-                      <button class="btn">Lorem ipsum</button>
-                    </div>
-                  </div>
-                  <div class="carta">
-                    <div class="contenido">
-                      <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
-                      <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque! Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
-                      <button class="btn">Lorem ipsum</button>
-                    </div>
-                  </div>
-                  <div class="carta">
-                    <div class="contenido">
-                      <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
-                      <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
-                      <button class="btn">Lorem impsum</button>
-                    </div>
-                  </div>
-                  <div class="carta">
-                    <div class="contenido">
-                      <h2 class="titulo">Lorem ipsum dolor sit amet.</h2>
-                      <p class="desc-carta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore saepe illum ab at doloribus corporis cum sit nam, non sunt enim nemo quae vero? Eum tenetur ipsam temporibus cumque!</p>
-                      <button class="btn">Lorem impsum</button>
-                    </div>
-                </div>              
-            </div>
-        </div>
-
         <section class="slider">
             <div class="slider-container" id="slider-container">
                 <div class="slider-track">
                     <div class="slider-group active">
                         <div class="slider-item">
-                            <img src="img/3f0afa7b77ce6338ff97b3fd882796ea.jpg" alt="Imagen 1">
+                            <img src="img/3f0afa7b77ce6338ff97b3fd882796ea.jpg" alt="Imagen del evento 1">
                         </div>
                         <div class="slider-item">
-                            <img src="img/777c486d0dd815e7ce46bce1d30ca59a.jpg" alt="Imagen 2">
+                            <img src="img/777c486d0dd815e7ce46bce1d30ca59a.jpg" alt="Imagen del evento 2">
                         </div>
                         <div class="slider-item">
-                            <img src="img/bc62690ec636842c7d0caa57828f1773.jpg" alt="Imagen 3">
+                            <img src="img/bc62690ec636842c7d0caa57828f1773.jpg" alt="Imagen del evento 3">
                         </div>
                         <div class="slider-item">
-                            <img src="img/descarafsdaga.jpg" alt="Imagen 4">
+                            <img src="img/descarafsdaga.jpg" alt="Imagen del evento 4">
                         </div>
                     </div>
                     <div class="slider-group">
                         <div class="slider-item">
-                            <img src="img/descarga (1).jpg" alt="Imagen 5">
+                            <img src="img/descarga (1).jpg" alt="Imagen del evento 5">
                         </div>
                         <div class="slider-item">
-                            <img src="img/descarga (2).jpg" alt="Imagen 6">
+                            <img src="img/descarga (2).jpg" alt="Imagen del evento 6">
                         </div>
                         <div class="slider-item">
-                            <img src="img/descarga (3).jpg" alt="Imagen 7">
+                            <img src="img/descarga (3).jpg" alt="Imagen del evento 7">
                         </div>
                         <div class="slider-item">
-                            <img src="img/descarga (4).jpg" alt="Imagen 8">
+                            <img src="img/descarga (4).jpg" alt="Imagen del evento 8">
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section>    
+
         <section class="comentarios">
             <div class="carta_comentario">
                 <p class="comentario">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget metus non dolor eleifend ultrices.</p>
@@ -104,20 +88,20 @@
             <div class="carta_comentario">
                 <p class="comentario">Vestibulum vel odio nisi. Ut lobortis, nunc nec posuere malesuada, ex libero vehicula tortor, at dapibus nibh arcu ut felis.</p>
                 <p class="persona">Sergio /Sin apellido/</p>
-                <p class="texto-breve">texto breve</p>
+                <p class="texto-breve">Texto breve</p>
             </div>
             <div class="carta_comentario">
                 <p class="comentario">Aliquam erat volutpat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                 <p class="persona">Emiliano /Sin apellido/</p>
-                <p class="texto-breve">texto breve</p>
+                <p class="texto-breve">Texto breve</p>
             </div>
             <div class="carta_comentario">
                 <p class="comentario">Curabitur tempus dui eget ante maximus, et ultricies mi rutrum.</p>
                 <p class="persona">Martina Torres</p>
-                <p class="texto-breve">texto breve</p>
+                <p class="texto-breve">Texto breve</p>
             </div>
         </section>
-    </main>
+        </main>
     <script src="Script.js"></script>
 </body>
 </html>
