--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
                     </div>
 
                     <div class="playBtnContenedor">
-                        <div class="playBtn"></div>
+                        <div class="playBtnFondo">
+                            <div class="playBtn"></div>
+                        </div>
                     </div>
                     
                 </div>
