--- a/index.html
+++ b/index.html
@@ -44,93 +44,96 @@
             <h2>Las Contrade: Los Barrios de Siena</h2>
             <p>Cada barrio de Siena, conocido como "contrade", apoya a su propio jinete en la carrera. Al caminar por las calles de la ciudad, los colores y banderas nos indican en qué barrio estamos. Las sedes de las contrade exhiben orgullosamente sus trofeos y logros.</p>
             <p>Los nombres de estas coloridas contrade incluyen Aquila, Bruco, Chiocciola, Civetta, Drago, Giraffa, Istrice, Leocorno, Lupa, Nicchio, Oca, Onda, Pantera, Selva, Tartuca, Torre y Valdimontone.</p>
-            <div class="contenedor-cartas">    
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Aquila</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Bruco</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Chiocciola</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Civetta</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Drago</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Giraffa</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Istrice</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Leocorno</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Lupa</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Nicchio</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Oca</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Onda</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Pantera</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Selva</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Tartuca</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Torre</h2>
-                    </div>
-                </div>
-                <div class="carta">
-                    <div class="contenido">
-                    <h2 class="titulo">Valdimontone</h2>
-                    </div>
-                </div>
+            <div class="contenedor-cartasBtn">
+                <button id="mostrarCartasBtn">Contradas</button>
             </div>
+                <div class="contenedor-cartas oculto">       
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo"><a href="http://www.contradadellaquila.com/">Aquila</a></h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Bruco</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Chiocciola</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Civetta</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Drago</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Giraffa</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Istrice</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Leocorno</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Lupa</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Nicchio</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Oca</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Onda</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Pantera</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Selva</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Tartuca</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Torre</h2>
+                        </div>
+                    </div>
+                    <div class="carta">
+                        <div class="contenido">
+                        <h2 class="titulo">Valdimontone</h2>
+                        </div>
+                    </div>
+                </div>
         </section>
         
         <section id="premio" class="detalle">
