--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="Logo">
+            <img src="Palio_Logo.jpg" alt="Logo">
         </div>
         <div id="menu-hamburguesa" class="menu-hamburguesa">
             <div class="linea"></div>
@@ -55,82 +55,82 @@
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Bruco</h2>
+                        <h2 class="titulo"><a href="http://www.nobilcontradadelbruco.it/">Bruco</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Chiocciola</h2>
+                        <h2 class="titulo"><a href="http://www.contradadellachiocciola.it/">Chiocciola</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Civetta</h2>
+                        <h2 class="titulo"><a href="http://www.contradadellacivetta.it/">Civetta</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Drago</h2>
+                        <h2 class="titulo"><a href="http://www.contradadeldrago.it/">Drago</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Giraffa</h2>
+                        <h2 class="titulo"><a href="http://www.contradadellagiraffa.it/">Giraffa</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Istrice</h2>
+                        <h2 class="titulo"><a href="http://www.istrice.org">Istrice</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Leocorno</h2>
+                        <h2 class="titulo"><a href="http://www.contradaleocorno.it/">Leocorno</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Lupa</h2>
+                        <h2 class="titulo"><a href="http://www.contradadellalupa.it/">Lupa</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Nicchio</h2>
+                        <h2 class="titulo"><a href="http://www.nobilecontradadelnicchio.it">Nicchio</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Oca</h2>
+                        <h2 class="titulo"><a href="http://www.contradadelloca.it">Oca</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Onda</h2>
+                        <h2 class="titulo"><a href="http://www.contradacapitanadellonda.it">Onda</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Pantera</h2>
+                        <h2 class="titulo"><a href="http://www.contradadellapantera.it">Pantera</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Selva</h2>
+                        <h2 class="titulo"><a href="http://www.contradadellaselva.it">Selva</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Tartuca</h2>
+                        <h2 class="titulo"><a href="http://www.tartuca.it/">Tartuca</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Torre</h2>
+                        <h2 class="titulo"><a href="http://www.contradadellatorre.it/popolo-index.asp">Torre</a></h2>
                         </div>
                     </div>
                     <div class="carta">
                         <div class="contenido">
-                        <h2 class="titulo">Valdimontone</h2>
+                        <h2 class="titulo"><a href="http://www.valdimontone.it/">Valdimontone</a></h2>
                         </div>
                     </div>
                 </div>
@@ -229,9 +229,18 @@
                         </div>
                     </div>
 
-                    <div class="playBtnContenedor">
-                        <div class="playBtnFondo">
-                            <div class="playBtn"></div>
+                    <div class="modalBtnContenedor">
+                        <div class="modalBtnFondo">
+                            <div class="modalBtn" id="modalBtn"></div>
+                            <!--Modal para el video-->
+                            <div class="modal" id="myModal">
+                                <div class="modal-content">
+                                    <span class="closeModal">&times;</span>
+                                    <div class="video-container">
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/OfsNr8AdCrA?si=VdqpoCboAD38vQpC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     
