--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             </div>
             <div class="carta_comentario">
                 <p class="comentario">Aliquam erat volutpat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                <p class="persona">Emiliano /Sin apellido/</p>
+                <p class="persona">Emiliano Aragonés</p>
                 <p class="texto-breve">Texto breve</p>
             </div>
             <div class="carta_comentario">
