--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             </div>
             <div class="carta_comentario">
                 <p class="comentario">Vestibulum vel odio nisi. Ut lobortis, nunc nec posuere malesuada, ex libero vehicula tortor, at dapibus nibh arcu ut felis.</p>
-                <p class="persona">Sergio Glättli</p>
+                <p class="persona">Sergio </p>
                 <p class="texto-breve">Texto breve</p>
             </div>
             <div class="carta_comentario">
