--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>Ogni quartiere di Siena, conosciuto come "contrade", sostiene il proprio fantino nella corsa. Camminando per le strade della città, i colori e le bandiere indicano in quale quartiere ci troviamo. Le sedi delle contrade mostrano orgogliosamente i loro trofei e successi.</p>
             <p>I nomi di queste colorate contrade includono Aquila, Bruco, Chiocciola, Civetta, Drago, Giraffa, Istrice, Leocorno, Lupa, Nicchio, Oca, Onda, Pantera, Selva, Tartuca, Torre e Valdimontone.</p>        
             <div class="contenedor-cartasBtn">
-                <button id="mostrarCartasBtn">Contradas</button>
+                <button id="mostrarCartasBtn">Contrade</button>
             </div>
                 <div class="contenedor-cartas oculto">       
                     <div class="carta">
