--- a/index.html
+++ b/index.html
@@ -251,24 +251,20 @@
 
         <section id="comentarios" class="comentarios">
             <div class="carta_comentario">
-                <p class="comentario">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget metus non dolor eleifend ultrices.</p>
+                <p class="comentario">"Mi è sembrato un argomento molto interessante, sia la competizione stessa che le festività che comporta, e mi ha fatto rendere conto di quanto poco conosciamo delle interessanti festività di altri paesi. Dopo aver visto come si vive il Palio a Siena, senza dubbio mi piacerebbe viverlo di persona in qualche momento."</p>
                 <p class="persona">Rodrigo Araujo</p>
-                <p class="texto-breve">Eh llorado sangre haciendo esto</p>
             </div>
             <div class="carta_comentario">
-                <p class="comentario">Vestibulum vel odio nisi. Ut lobortis, nunc nec posuere malesuada, ex libero vehicula tortor, at dapibus nibh arcu ut felis.</p>
+                <p class="comentario">"Un viaggio all'epoca medievale, che si mescola con la passione e le tradizioni di un popolo moderno. Ti viene voglia di andare."</p>
                 <p class="persona">Sergio Glättli</p>
-                <p class="texto-breve">Texto breve</p>
             </div>
             <div class="carta_comentario">
-                <p class="comentario">Aliquam erat volutpat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                <p class="comentario">"Non conoscevo questo importante evento in Italia, ma ora posso dire che sono rimasto affascinato dal Palio di Siena, mi ha motivato a continuare a esplorare la cultura italiana."</p>
                 <p class="persona">Emiliano Aragonés</p>
-                <p class="texto-breve">Texto breve</p>
             </div>
             <div class="carta_comentario">
-                <p class="comentario">Curabitur tempus dui eget ante maximus, et ultricies mi rutrum.</p>
+                <p class="comentario">"In mia opinione, scoprire il Palio di Siena è stato molto confortante; investigare la sua storia nel corso degli anni e vedere la sua evoluzione insieme ai miei compagni è stata un'esperienza molto piacevole."</p>
                 <p class="persona">Martina Torres</p>
-                <p class="texto-breve">Texto breve</p>
             </div>
         </section>
     </main>
